Typos and removing staging URL (#647)

--- a/examples/extract/sec_10k_filing.ipynb
+++ b/examples/extract/sec_10k_filing.ipynb
@@ -17,7 +17,7 @@
     "Let's take a look at Nvidia's 10-K filing for the year 2024. Here's the SEC link for the [10-K filing](https://www.sec.gov/ix?doc=/Archives/edgar/data/0001045810/000104581025000023/nvda-20250126.htm).\n",
     "As you can see, this is a pretty large document with a lot of information to parse through. \n",
     "\n",
-    "> **Note:** This general idea of what fields generalize across your target documents and what might be optional is an important one to keep in mind when designing your schema. \n"
+    "> **Note:** This principle of what fields generalize across your target documents and what might be optional is an important one to keep in mind when designing your schema. \n"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "load_dotenv(override=True)\n",
     "\n",
     "# Optionally, add your project id/organization id\n",
-    "llama_extract = LlamaExtract(base_url=\"https://api.staging.llamaindex.ai\")"
+    "llama_extract = LlamaExtract()"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
    "id": "af810951",
    "metadata": {},
    "source": [
-    "### Closing Remarks: General Guidelines for Long-Form Document Extraction\n",
+    "### General Guidelines for Long-Form Document Extraction\n",
     "\n",
     "- **Schema Iteration using the Web UI**: We have a Web UI with a schema builder that can help you define your schema and iterate on different documents. We have a 10-K/Q schema for you to get started with if you are interested in trying this out. \n",
     "  Start small and build from there! Refer to the tips above. Try your schema on different documents to see whether it generalizes to the target documents.\n",
