--- a/examples/extract/lm317_structured_extraction.ipynb
+++ b/examples/extract/lm317_structured_extraction.ipynb
@@ -28,13 +28,12 @@
     "\n",
     "### Agent Workflow (Combination of Automation and Chat)\n",
     "1. **Upload Datasheet:** The engineer uploads the LM317 datasheet PDF.  \n",
-    "2. **Structured Extraction:** An automated agent processes the PDF and extracts key technical details into structured fields (e.g., output voltage as a range with separate min/max values). It also returns page citations for verification. \n",
+    "2. **Structured Extraction:** An automated agent processes the PDF and extracts key technical details into structured fields (e.g., output voltage as a range with separate min/max values).\n",
     "3. **Interactive Verification:** The engineer can query the agent (via chat) for further details or clarification (e.g., \"Show me the detailed pin configuration extraction\") and review the cited pages.\n",
     "\n",
     "**Value Delivered:**\n",
     "- Up to 70% reduction in manual data extraction time.\n",
-    "- Increased accuracy and standardization with structured fields.\n",
-    "- Full traceability with page citations for each extracted detail."
+    "- Increased accuracy and standardization with structured fields."
    ]
   },
   {
@@ -90,8 +89,7 @@
     "\n",
     "- The **output_voltage** and **input_voltage** fields are structured as ranges with separate minimum and maximum values and a unit.\n",
     "- The **pin_configuration** field is structured to include a pin count and a descriptive layout.\n",
-    "- Additional technical fields (e.g., dropout voltage, max current) are captured as numbers.\n",
-    "- We include a **page_citations** mapping to track where each field was extracted from.\n"
+    "- Additional technical fields (e.g., dropout voltage, max current) are captured as numbers.\n"
    ]
   },
   {
@@ -231,7 +229,6 @@
     "- **input_voltage** as a structured range\n",
     "- **pin_configuration** with a `pin_count` and `layout`\n",
     "- **features** (if available)\n",
-    "- **page_citations** mapping each field to a list of page numbers\n",
     "\n",
     "This structured approach makes it easier to standardize the information for downstream integration and verification. Engineers can click on the cited page numbers (in a UI that supports it) to validate the extraction."
    ]
