new result object (#650)

--- a/examples/parse/demo_json.ipynb
+++ b/examples/parse/demo_json.ipynb
@@ -31,11 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install llama-index\n",
-    "!pip install llama-index-core\n",
-    "!pip install llama-index-llms-anthropic llama-index-multi-modal-llms-anthropic\n",
-    "!pip install llama-index-embeddings-huggingface\n",
-    "!pip install llama-cloud-services"
+    "%pip install llama-index\n",
+    "%pip install llama-index-core\n",
+    "%pip install llama-index-llms-anthropic\n",
+    "%pip install llama-index-embeddings-huggingface\n",
+    "%pip install llama-cloud-services"
    ]
   },
   {
@@ -45,11 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama-parse is async-first, running the async code in a notebook requires the use of nest_asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import os\n",
     "\n",
     "# API access to llama-cloud\n",
@@ -68,7 +63,7 @@
    "source": [
     "from llama_index.llms.anthropic import Anthropic\n",
     "\n",
-    "llm = Anthropic(model=\"claude-3-opus-20240229\", temperature=0.0)"
+    "llm = Anthropic(model=\"claude-3-5-sonnet-20241022\")"
    ]
   },
   {
@@ -131,28 +126,8 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse(verbose=True)\n",
-    "json_objs = parser.get_json_result(\"./uber_10q_march_2022.pdf\")\n",
-    "json_list = json_objs[0][\"pages\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b26d21d1-05b5-4f49-b937-c13106a84015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.schema import TextNode\n",
-    "from typing import List\n",
-    "\n",
-    "\n",
-    "def get_text_nodes(json_list: List[dict]):\n",
-    "    text_nodes = []\n",
-    "    for idx, page in enumerate(json_list):\n",
-    "        text_node = TextNode(text=page[\"text\"], metadata={\"page\": page[\"page\"]})\n",
-    "        text_nodes.append(text_node)\n",
-    "    return text_nodes"
+    "parser = LlamaParse(take_screenshot=True)\n",
+    "result = await parser.aparse(\"./uber_10q_march_2022.pdf\")"
    ]
   },
   {
@@ -162,7 +137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_nodes = get_text_nodes(json_list)"
+    "text_nodes = await result.aget_text_nodes(split_by_page=True)\n",
+    "image_nodes = await result.aget_image_nodes(\n",
+    "    include_screenshot_images=True,\n",
+    "    include_object_images=True,\n",
+    "    image_download_dir=\"./uber_10q_images\",\n",
+    ")"
    ]
   },
   {
@@ -172,7 +152,7 @@
    "source": [
     "## Extract/Index images from image dicts\n",
     "\n",
-    "Here we use a multimodal model to extract and index images from image dictionaries."
+    "Here we use a multimodal model to caption images and create text nodes for indexing."
    ]
   },
   {
@@ -190,27 +170,32 @@
     }
    ],
    "source": [
-    "# call get_images on parser, convert to ImageDocuments\n",
-    "!mkdir llama2_images\n",
+    "!mkdir -p llama2_images\n",
     "\n",
-    "from llama_index.core.schema import ImageDocument\n",
-    "from llama_index.multi_modal_llms.anthropic import AnthropicMultiModal\n",
+    "from llama_index.core.llms import ChatMessage, ImageBlock, TextBlock\n",
+    "from llama_index.core.schema import ImageNode, TextNode\n",
+    "from llama_index.llms.anthropic import Anthropic\n",
     "\n",
     "\n",
-    "def get_image_text_nodes(json_objs: List[dict]):\n",
+    "def get_image_text_nodes(image_nodes: list[ImageNode]):\n",
     "    \"\"\"Extract out text from images using a multimodal model.\"\"\"\n",
-    "    anthropic_mm_llm = AnthropicMultiModal(max_tokens=300)\n",
-    "    image_dicts = parser.get_images(json_objs, download_path=\"llama2_images\")\n",
-    "    image_documents = []\n",
+    "    llm = Anthropic(model=\"claude-3-5-haiku-20241022\", max_tokens=300)\n",
     "    img_text_nodes = []\n",
-    "    for image_dict in image_dicts:\n",
-    "        image_doc = ImageDocument(image_path=image_dict[\"path\"])\n",
-    "        response = anthropic_mm_llm.complete(\n",
-    "            prompt=\"Describe the images as alt text\",\n",
-    "            image_documents=[image_doc],\n",
+    "    for image_node in image_nodes:\n",
+    "        image_path = image_node.image_path\n",
+    "        message = ChatMessage(\n",
+    "            role=\"user\",\n",
+    "            blocks=[\n",
+    "                TextBlock(text=\"Describe the images as alt text\"),\n",
+    "                ImageBlock(path=image_path),\n",
+    "            ],\n",
     "        )\n",
-    "        text_node = TextNode(text=str(response), metadata={\"path\": image_dict[\"path\"]})\n",
+    "        response = llm.chat([message])\n",
+    "        text_node = TextNode(\n",
+    "            text=str(response.message.content), metadata={\"path\": image_path}\n",
+    "        )\n",
     "        img_text_nodes.append(text_node)\n",
+    "\n",
     "    return img_text_nodes"
    ]
   },
@@ -221,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_text_nodes = get_image_text_nodes(json_objs)"
+    "image_text_nodes = get_image_text_nodes(image_nodes)"
    ]
   },
   {
