--- a/examples/parse/demo_languages.ipynb
+++ b/examples/parse/demo_languages.ipynb
@@ -31,14 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama-parse is async-first, running the sync code in a notebook requires the use of nest_asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import os\n",
     "\n",
-    "# os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
    ]
   },
   {
@@ -79,8 +74,9 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse(result_type=\"text\", language=\"fr\")\n",
-    "documents = parser.load_data(\"./treasury_report.pdf\")"
+    "parser = LlamaParse(language=\"fr\")\n",
+    "result = await parser.aparse(\"./treasury_report.pdf\")\n",
+    "documents = result.get_text_documents(split_by_page=False)"
    ]
   },
   {
@@ -252,8 +248,9 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse(result_type=\"text\", language=\"ch_sim\")\n",
-    "documents = parser.load_data(\"./chinese_pdf.pdf\")"
+    "parser = LlamaParse(language=\"ch_sim\")\n",
+    "result = await parser.aparse(\"./chinese_pdf.pdf\")\n",
+    "documents = result.get_text_documents(split_by_page=False)"
    ]
   },
   {
@@ -406,8 +403,9 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "base_parser = LlamaParse(result_type=\"text\", language=\"en\")\n",
-    "base_documents = parser.load_data(\"./chinese_pdf2.pdf\")"
+    "base_parser = LlamaParse(language=\"en\")\n",
+    "result = await base_parser.aparse(\"./chinese_pdf2.pdf\")\n",
+    "base_documents = result.get_text_documents(split_by_page=False)"
    ]
   },
   {
