--- a/examples/parse/demo_mongodb.ipynb
+++ b/examples/parse/demo_mongodb.ipynb
@@ -60,11 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama-parse is async-first, running the sync code in a notebook requires the use of nest_asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import requests\n",
     "import pymongo\n",
     "\n",
@@ -72,7 +67,7 @@
     "from llama_cloud_services import LlamaParse\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "from llama_index.core import VectorStoreIndex, StorageContext\n",
-    "from llama_index.core.node_parser import SimpleNodeParser"
+    "from llama_index.core.node_parser import SentenceSplitter"
    ]
   },
   {
@@ -137,7 +132,8 @@
     }
    ],
    "source": [
-    "documents = LlamaParse(result_type=\"text\").load_data(file_path)"
+    "result = await LlamaParse().aparse(file_path)\n",
+    "documents = result.get_text_documents(split_by_page=False)"
    ]
   },
   {
@@ -203,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_parser = SimpleNodeParser()\n",
+    "node_parser = SentenceSplitter()\n",
     "\n",
     "nodes = node_parser.get_nodes_from_documents(documents)"
    ]
