--- a/examples/parse/demo_starter_parse_selected_pages.ipynb
+++ b/examples/parse/demo_starter_parse_selected_pages.ipynb
@@ -47,11 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama-parse is async-first, running the async code in a notebook requires the use of nest_asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import os\n",
     "\n",
     "# API access to llama-cloud\n",
@@ -71,25 +66,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-12-05 11:40:59--  https://raw.githubusercontent.com/run-llama/llama_index/main/docs/docs/examples/data/10k/uber_2021.pdf\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8000::154, 2606:50c0:8002::154, 2606:50c0:8003::154, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8000::154|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 1880483 (1.8M) [application/octet-stream]\n",
-      "Saving to: ‘./uber_2021.pdf’\n",
-      "\n",
-      "./uber_2021.pdf     100%[===================>]   1.79M  --.-KB/s    in 0.1s    \n",
-      "\n",
-      "2024-12-05 11:40:59 (14.2 MB/s) - ‘./uber_2021.pdf’ saved [1880483/1880483]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget 'https://raw.githubusercontent.com/run-llama/llama_index/main/docs/docs/examples/data/10k/uber_2021.pdf' -O './uber_2021.pdf'"
    ]
@@ -119,9 +96,10 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse(target_pages=\"0,1,2\", result_type=\"markdown\")\n",
+    "parser = LlamaParse(target_pages=\"0,1,2\")\n",
     "\n",
-    "documents = parser.load_data(\"./uber_2021.pdf\")"
+    "results = await parser.aparse(\"./uber_2021.pdf\")\n",
+    "documents = results.get_text_documents(split_by_page=True)"
    ]
   },
   {
