--- a/examples/parse/demo_basic.ipynb
+++ b/examples/parse/demo_basic.ipynb
@@ -13,32 +13,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index llama-parse"
+    "%pip install llama-index llama-cloud-services"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-02-02 11:10:10--  https://arxiv.org/pdf/1706.03762.pdf\n",
-      "Resolving arxiv.org (arxiv.org)... 151.101.131.42, 151.101.3.42, 151.101.67.42, ...\n",
-      "Connecting to arxiv.org (arxiv.org)|151.101.131.42|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2215244 (2.1M) [application/pdf]\n",
-      "Saving to: ‘./attention.pdf’\n",
-      "\n",
-      "./attention.pdf     100%[===================>]   2.11M  --.-KB/s    in 0.08s   \n",
-      "\n",
-      "2024-02-02 11:10:10 (25.9 MB/s) - ‘./attention.pdf’ saved [2215244/2215244]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget \"https://arxiv.org/pdf/1706.03762.pdf\" -O \"./attention.pdf\""
    ]
@@ -49,11 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# llama-parse is async-first, running the sync code in a notebook requires the use of nest_asyncio\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import os\n",
     "\n",
     "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
@@ -68,14 +45,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id dd0b8e31-0c09-4497-b78a-cc1c92f1d6cf\n"
+      "Started parsing the file under job_id 79ae653c-4598-4bd0-ba6e-b3dab7eab57e\n"
      ]
     }
    ],
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "documents = LlamaParse(result_type=\"text\").load_data(\"./attention.pdf\")"
+    "result = await LlamaParse().aparse(\"./attention.pdf\")"
    ]
   },
   {
@@ -87,23 +64,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ad\n",
+      "1   Introduction\n",
+      "Recurrent neural networks, long short-term memory [13] and gated recurrent [7] neural networks\n",
+      "in particular, have been firmly established as state of the art approaches in sequence modeling and\n",
+      "transduction problems such as language modeling and machine translation [35, 2, 5]. Numerous\n",
+      "efforts have since continued to push the boundaries of recurrent language models and encoder-decoder\n",
+      "architectures [38, 24, 15].\n",
+      "Recurrent models typically factor computation along the symbol positions of the input and output\n",
+      "sequences. Aligning the positions to steps in computation time, they generate a sequence of hidden\n",
+      "states ht, as a function of the previous hidden state ht−1 and the input for position t. This inherently\n",
+      "sequential nature precludes parallelization within training examples, which becomes critical at longer\n",
+      "sequence lengths, as memory constraints limit batching across examples. Recent work has achieved\n",
+      "significant improvements in computational efficiency through factorization tricks [21] and conditional\n",
+      "computation [32], while also improving model performance in case of the latter. The fundamental\n",
+      "constraint of sequential computation, however, remains.\n",
+      "Attention mechanisms have become an integral part of compelling sequence modeling and transduc-\n",
+      "tion models in various tasks, allowing modeling of dependencies without regard to their distance in\n",
+      "the input or output sequences [2, 19]. In all but a few cases [27], however, such attention mechanisms\n",
+      "are used in conjunction with a recurrent network.\n",
+      "In this work we propose the Transformer, a model architecture eschewing recurrence and instead\n",
       "relying entirely on an attention mechanism to draw global dependencies between input and output.\n",
       "The Transformer allows for significantly more parallelization and can reach a new state of the art in\n",
       "translation quality after being trained for as little as twelve hours on eight P100 GPUs.\n",
-      "2    Background\n",
+      "2   Background\n",
       "The goal of reducing sequential computation also forms the foundation of the Extended Neural GPU\n",
       "[16], ByteNet [18] and ConvS2S [9], all of which use convolutional neural networks as basic building\n",
       "block, computing hidden representations in parallel for all input and output positions. In these models,\n",
       "the number of operations required to relate signals from two arbitrary input or output positions grows\n",
       "in the distance between positions, linearly for ConvS2S and logarithmically for ByteNet. This makes\n",
       "it more difficult to learn dependencies between distant positions [12]. In the Transformer this is\n",
-      "reduced to a constant number of operations, albeit at the cost of reduced effective res\n"
+      "reduced to a constant number of operations, albeit at the cost of reduced effective resolution due\n",
+      "to averaging attention-weighted positions, an effect we counteract with Multi-Head Attention as\n",
+      "described in section 3.2.\n",
+      "Self-attention, sometimes called intra-attention is an attention mechanism relating different positions\n",
+      "of a single sequence in order to compute a representation of the sequence. Self-attention has been\n",
+      "used successfully in a variety of tasks including reading comprehension, abstractive summarization,\n",
+      "textual entailment and learning task-independent sentence representations [4, 27, 28, 22].\n",
+      "End-to-end memory networks are based on a recurrent attention mechanism instead of sequence-\n",
+      "aligned recurrence and have been shown to perform well on simple-language question answering and\n",
+      "language modeling tasks [34].\n",
+      "To the best of our knowledge, however, the Transformer is the first transduction model relying\n",
+      "entirely on self-attention to compute representations of its input and output without using sequence-\n",
+      "aligned RNNs or convolution. In the following sections, we will describe the Transformer, motivate\n",
+      "self-attention and discuss its advantages over models such as [17, 18] and [9].\n",
+      "3   Model Architecture\n",
+      "Most competitive neural sequence transduction models have an encoder-decoder structure [5, 2, 35].\n",
+      "Here, the encoder maps an input sequence of symbol representations (x1, ..., xn) to a sequence\n",
+      "of continuous representations z = (z1, ..., zn). Given z, the decoder then generates an output\n",
+      "sequence (y1, ..., ym) of symbols one element at a time. At each step the model is auto-regressive\n",
+      "[10], consuming the previously generated symbols as additional input when generating the next.\n",
+      "                                                2\n"
      ]
     }
    ],
    "source": [
-    "print(documents[0].text[6000:7000])"
+    "documents = result.get_text_documents(split_by_page=True)\n",
+    "print(documents[1].text)"
    ]
   },
   {
@@ -115,48 +131,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id d4531453-1bbb-48c4-8324-ae9fea9f2fa2\n"
+      "arXiv:1706.03762v7  [cs.CL]  2 Aug 2023\n",
+      "\n",
+      "Provided proper attribution is provided, Google hereby grants permission to reproduce the tables and figures in this paper solely for use in journalistic or scholarly works.\n",
+      "\n",
+      "# Attention Is All You Need\n",
+      "\n",
+      "Ashish Vaswani∗        Noam Shazeer∗           Niki Parmar∗        Jakob Uszkoreit∗\n",
+      "\n",
+      "Google Brain        Google Brain         Google Research       Google Research\n",
+      "\n",
+      "avaswani@google.com   noam@google.com        nikip@google.com      usz@google.com\n",
+      "\n",
+      "Llion Jones∗                Aidan N. Gomez∗ †               Łukasz Kaiser∗\n",
+      "\n",
+      "Google Research         University of Toronto                Google Brain\n",
+      "\n",
+      "llion@google.com      aidan@cs.toronto.edu           lukaszkaiser@google.com\n",
+      "\n",
+      "Illia Polosukhin∗ ‡\n",
+      "\n",
+      "illia.polosukhin@gmail.com\n",
+      "\n",
+      "# Abstract\n",
+      "\n",
+      "The dominant sequence transduction models are based on complex recurrent or convolutional neural networks that include an encoder and a decoder. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 BLEU on the WMT 2014 English-to-German translation task, improving over the existing best results, including ensembles, by over 2 BLEU. On the WMT 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art BLEU score of 41.8 after training for 3.5 days on eight GPUs, a small fraction of the training costs of the best models from the literature. We show that the Transformer generalizes well to other tasks by applying it successfully to English constituency parsing both with large and limited training data.\n",
+      "\n",
+      "∗Equal contribution. Listing order is random. Jakob proposed replacing RNNs with self-attention and started the effort to evaluate this idea. Ashish, with Illia, designed and implemented the first Transformer models and has been crucially involved in every aspect of this work. Noam proposed scaled dot-product attention, multi-head attention and the parameter-free position representation and became the other person involved in nearly every detail. Niki designed, implemented, tuned and evaluated countless model variants in our original codebase and tensor2tensor. Llion also experimented with novel model variants, was responsible for our initial codebase, and efficient inference and visualizations. Lukasz and Aidan spent countless long days designing various parts of and implementing tensor2tensor, replacing our earlier codebase, greatly improving results and massively accelerating our research.\n",
+      "\n",
+      "†Work performed while at Google Brain.\n",
+      "\n",
+      "‡Work performed while at Google Research.\n",
+      "\n",
+      "31st Conference on Neural Information Processing Systems (NIPS 2017), Long Beach, CA, USA.\n"
      ]
     }
    ],
    "source": [
-    "from llama_cloud_services import LlamaParse\n",
-    "\n",
-    "documents = LlamaParse(result_type=\"markdown\").load_data(\"./attention.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ction describes the training regime for our models.\n",
-      "\n",
-      "##### Training Data and Batching\n",
-      "\n",
-      "We trained on the standard WMT 2014 English-German dataset consisting of about 4.5 million\n",
-      "sentence pairs. Sentences were encoded using byte-pair encoding [3], which has a shared source-\n",
-      "target vocabulary of about 37000 tokens. For English-French, we used the significantly larger WMT\n",
-      "2014 English-French dataset consisting of 36M sentences and split tokens into a 32000 word-piece\n",
-      "vocabulary [38]. Sentence pairs were batched together by approximate sequence length. Each training\n",
-      "batch contained a set of sentence pairs containing approximately 25000 source tokens and 25000\n",
-      "target tokens.\n",
-      "\n",
-      "##### Hardware and Schedule\n",
-      "\n",
-      "We trained our models on one machine with 8 NVIDIA P100 GPUs. For our base models using\n",
-      "the hyperparameters described throughout the paper, each training step took about 0.4 seconds. We\n",
-      "trained the base models for a total of 100,000 steps or 12 hours. For our big models,(described on the\n",
-      "bo...\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(documents[0].text[20000:21000] + \"...\")"
+    "documents = result.get_markdown_documents(split_by_page=True)\n",
+    "print(documents[0].text)"
    ]
   }
  ],
