--- a/examples/parse/demo_starter_multimodal.ipynb
+++ b/examples/parse/demo_starter_multimodal.ipynb
@@ -55,10 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import os\n",
     "\n",
     "# API access to llama-cloud\n",
@@ -80,25 +76,7 @@
    "execution_count": null,
    "id": "IjtKDQRLrylI",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-12-05 18:54:24--  https://arxiv.org/pdf/2409.18486\n",
-      "Resolving arxiv.org (arxiv.org)... 151.101.67.42, 151.101.131.42, 151.101.3.42, ...\n",
-      "Connecting to arxiv.org (arxiv.org)|151.101.67.42|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 13986265 (13M) [application/pdf]\n",
-      "Saving to: ‘o1.pdf’\n",
-      "\n",
-      "o1.pdf              100%[===================>]  13.34M  11.8MB/s    in 1.1s    \n",
-      "\n",
-      "2024-12-05 18:54:26 (11.8 MB/s) - ‘o1.pdf’ saved [13986265/13986265]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget \"https://arxiv.org/pdf/2409.18486\" -O \"o1.pdf\""
    ]
@@ -116,25 +94,6 @@
     "\n",
     "\n",
     "Using your own API key may incur additional costs from your model provider and could result in failed pages or documents if you do not have sufficient usage limits."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc921729-3446-42ca-8e1b-a6fd26195ed9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.schema import TextNode\n",
-    "from typing import List\n",
-    "\n",
-    "\n",
-    "def get_text_nodes(json_list: List[dict]):\n",
-    "    text_nodes = []\n",
-    "    for idx, page in enumerate(json_list):\n",
-    "        text_node = TextNode(text=page[\"md\"], metadata={\"page\": page[\"page\"]})\n",
-    "        text_nodes.append(text_node)\n",
-    "    return text_nodes"
    ]
   },
   {
@@ -163,15 +122,13 @@
     "from llama_cloud_services import LlamaParse\n",
     "\n",
     "parser = LlamaParse(\n",
-    "    result_type=\"markdown\",\n",
     "    use_vendor_multimodal_model=True,\n",
     "    vendor_multimodal_model_name=\"anthropic-sonnet-3.5\",\n",
     "    target_pages=\"24\"\n",
     "    # invalidate_cache=True\n",
     ")\n",
-    "json_objs = parser.get_json_result(\"o1.pdf\")\n",
-    "json_list = json_objs[0][\"pages\"]\n",
-    "docs = get_text_nodes(json_list)"
+    "result = await parser.aparse(\"o1.pdf\")\n",
+    "nodes = result.get_text_nodes(split_by_page=False)"
    ]
   },
   {
@@ -202,15 +159,13 @@
     "from llama_cloud_services import LlamaParse\n",
     "\n",
     "parser_gpt4o = LlamaParse(\n",
-    "    result_type=\"markdown\",\n",
     "    use_vendor_multimodal_model=True,\n",
     "    vendor_multimodal_model=\"openai-gpt4o\",\n",
     "    target_pages=\"24\",\n",
     "    # invalidate_cache=True\n",
     ")\n",
-    "json_objs_gpt4o = parser_gpt4o.get_json_result(\"o1.pdf\")\n",
-    "json_list_gpt4o = json_objs_gpt4o[0][\"pages\"]\n",
-    "docs_gpt4o = get_text_nodes(json_list_gpt4o)"
+    "result = await parser_gpt4o.aparse(\"o1.pdf\")\n",
+    "nodes = result.get_markdown_nodes(split_by_page=False)"
    ]
   },
   {
@@ -268,7 +223,7 @@
    ],
    "source": [
     "# using Sonnet-3.5\n",
-    "print(docs[0].get_content(metadata_mode=\"all\"))"
+    "print(nodes[0].get_content(metadata_mode=\"all\"))"
    ]
   },
   {
@@ -327,7 +282,7 @@
    ],
    "source": [
     "# using GPT-4o\n",
-    "print(docs_gpt4o[0].get_content(metadata_mode=\"all\"))"
+    "print(nodes[0].get_content(metadata_mode=\"all\"))"
    ]
   }
  ],
