Copy extracted citations to the new repo (#832)
* Copy extracted citations to the new repo

* fix spell check

* ignore examples too

* tweak timeout

* add changes to github actions

* shrug

--- a/examples/parse/parsing_modes/demo_layout_agent_mode_visual_citations.ipynb
+++ b/examples/parse/parsing_modes/demo_layout_agent_mode_visual_citations.ipynb
@@ -147,7 +147,7 @@
     "documents = []\n",
     "\n",
     "for i, page in enumerate(pages):\n",
-    "    # loop trough items of the page\n",
+    "    # loop through items of the page\n",
     "    for item in page[\"items\"]:\n",
     "        document = Document(\n",
     "            text=item[\"md\"], extra_info={\"bbox\": item[\"bBox\"], \"page\": i}\n",
